--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.iamvickyav.springboot</groupId>
-	<artifactId>SpringBootRestWithH2</artifactId>
+	<groupId>com.app</groupId>
+	<artifactId>employee-api</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>SpringBootRestWithH2</name>
+	<name>Employee-API</name>
 	<description>Application to demonstrate usage of H2 DB with SpringBoot</description>
 
 	<parent>
@@ -22,11 +22,11 @@
 		<java.version>1.8</java.version>
 	</properties>
 
-	<scm>
+<!-- 	<scm>
 		<connection>scm:git:git@github.com:iamvickyav/spring-boot-data-H2-embedded.git</connection>
 		<url>scm:git:git@github.com:iamvickyav/spring-boot-data-H2-embedded.git</url>
 		<developerConnection>scm:git:git@github.com:iamvickyav/spring-boot-data-H2-embedded.git</developerConnection>
-	</scm>
+	</scm> -->
 
 	<dependencies>
 
